# yuanpeak

./: .gitignore  CMakeLists.txt  README.md  flush.cmd
Firmware/CMSIS/GD/GD32F4xx/Include/: gd32f4xx.h  gd32f4xx_libopt.h
Firmware/CMSIS/GD/GD32F4xx/Source/GCC/: startup_gd32f450_470.S
HAL/: Display.cc  Display.h  HAL.cc  HAL.h  Serial.h  baozi.h  bsp_usart.c  bsp_usart.h  exmc_sdram.c  exmc_sdram.h  font.h  lcd.c  lcd.h  maomao.h  pic.h  systick.c  touch.c  touch.h
config/: config.h  version.h
lib/: lv_conf.h
lib/lvgl/: lvgl.h
lib/lvgl/demos/: lv_demos.h
lib/lvgl/demos/stress/: lv_demo_stress.c  lv_demo_stress.h
lib/lvgl/env_support/cmake/: custom.cmake
lib/lvgl/env_support/rt-thread/: lv_rt_thread_conf.h  lv_rt_thread_port.c
lib/lvgl/examples/porting/: lv_port_disp_template.c  lv_port_disp_template.h  lv_port_indev_template.c
lib/lvgl/porting/: lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
lib/lvgl/src/core/: lv_disp.c
lib/lvgl/src/misc/: lv_timer.c
lvgl/: lv_conf.h
lvgl/demos/stress/: lv_demo_stress.c
lvgl/porting/: lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
rtthread/: board.c  board.h  rtconfig.h
rtthread/include/: rtthread.h
rtthread/src/: kservice.c
user/: gd32f4xx_it.c  gd32f4xx_it.h  main.cc  mythread.h  sys.h
